--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,5 +1,5 @@
 Name=brain
-FLAG= -std=c++98 -Wall -Wextra -Werror
+FLAG= -std=c++98 -Wall -Wextra -Werror -g3
 SRC= main.cpp Brain.cpp Animal.cpp Cat.cpp Dog.cpp WrongCat.cpp WrongAnimal.cpp
 
 OBJ=$(SRC:.cpp=.o)
